fix: module version name and new icon

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.6
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
+	mod_version = 1.19.0
+	maven_group = com.gmail.lydia7635
 	archives_base_name = screenshot-to-discord
 
 # Dependencies
